根组件app.js与入口文件index.js各司其职

--- a/React从零开始进阶教程/1.3-第一个页面.md
+++ b/React从零开始进阶教程/1.3-第一个页面.md
@@ -41,4 +41,16 @@ ReactDOM.render(<FristCom/>,document.getElementById("root"));
 ```
 -   在组件中设置div的属性  className="c1"
 
+### 改造入口文件index.js
+    工程化的项目，index.js作为入口文件,主要负责：
+1.  引入页面依赖模块,如,核心库react、虚拟DOM模块react-dom、路由模块react-router等等
+2.  引入通用css样式,如,iconfont图标库、animate.css动画库等等
+3.  引入根组件App
+4.  依据模块化的思想,专人专用,页面的内容应该写在根组件内,而不应该写在index.js入口文件内。因此我们需要将页面内容分离到根组件App.js内。
 
+#### 根组件：
+-   根组件一般是管理所有子组件，项目中只允许一个根组件的存在。在src中创建app.js当作根组件。
+-   index.js作为入口文件
+-   app.js作为根组件，管理子组件；
+
+#### 
