--- a/React从零开始进阶教程/6.1-基础路由.md
+++ b/React从零开始进阶教程/6.1-基础路由.md
@@ -3,15 +3,44 @@
     >npm i react-router-dom -S
 -   入口文件index.js中加载路由包中的BrowserRouter模块
     >import {BrowserRouter} from "react-router-dom";
--   在App根组件外面嵌套BrowserRouter组件：
-    ```javascript
-        ReactDOM.render(<BrowserRouter><App/></BrowserRouter>,document.getElementById("root"));
-    ```
+-   入口文件index.js中，在App根组件外面嵌套BrowserRouter组件：
+```javascript
+ReactDOM.render(<BrowserRouter><App/></BrowserRouter>,document.getElementById("root"));
+```
 -   创建三个页面组件pageA pageB  pageC
--   创建src/router.js 配置文件；配置页面组件与url的映射关系
+-   创建src/router.js路由配置文件；配置页面组件与url的映射关系
     我们先引入react-router-dom模块的Switch组件和Route组件：
--   在app.js中加载Router路由文件；
--   
+```javascript
+import React from "react";
+import {Switch,Route} from "react-router-dom";
+import PageA from "./components/pages/pageA"
+import PageB from "./components/pages/pageB"
+import PageC from "./components/pages/pageC"
+class Router extends React.Component{
+    render(){
+        return (
+            <Switch>
+                <Route exact path="/" component={PageA}></Route>
+                <Route path="/a" component={PageA}></Route>
+                <Route path="/b" component={PageB}></Route>
+                <Route path="/c" component={PageC}></Route>
+            </Switch>
+        )
+    }
+}
+export default Router;
+```
+-   在app.js中加载Router路由文件；根组件改造如下
+```javascript
+class app extends React.Component{
+    render(){
+        return (
+            <Router></Router>
+        )
+    }
+}
+export default app
+```
 
 
 **知识点**
