--- a/React从零开始进阶教程/7.1-flux.md
+++ b/React从零开始进阶教程/7.1-flux.md
@@ -1,16 +1,35 @@
-##　Flux
-从代码层面而言，flux无非就是一个常见的event dispatcher，其目的是要将以往MVC中各个View组件内的controller代码片断提取出来放到更加恰当的地方进行集中化管理，并从开发体验上实现了舒适清爽、容易驾驭的“单向流”模式。
+## Flux是什么？
+Flux 是一种架构思想，专门解决软件的结构问题。它跟MVC 架构是同一类东西，但是更加简单和清晰。
+## 基本概念
+flux分为4个部分。
+-   view 视图层：（组件）
+-   action 动作：视图发生的动作，比如mouseclick
+-   dispatcher：派发器，接收action的消息，执行回调函数；一般操作store的变化
+-   store：数据层；存放数据，也就是视图层的状态state；变化是，提醒view重新渲染（render）
 
-- Flux将一个应用分成四个部分：
-View： 视图层
-Action（动作）：视图层发出的消息（比如mouseClick）
-Dispatcher（派发器）：用来接收Actions、执行回调函数
-Store（数据层）：用来存放应用的状态，一旦发生变动，就提醒Views要更新页面
+## 特点：
+单向数据流：如图：
 <image src="./7-1-flux.png">
+-   用户访问view
+-   用户在view发生一些action
+-   dispatcher监听到action，并根据逻辑去更新store；
+-   store更新之后，用setState生成一个新的虚拟DOM
+-   view 根据虚拟DOM、Diff算法更新view
 
-- Flux 的最大特点，就是数据的"单向流动"。
-①用户访问 View
-②View 发出用户的 Action
-③Dispatcher 收到 Action，要求 Store 进行相应的更新
-④Store 更新后，发出一个"change"事件
-⑤View 收到"change"事件后，更新页面
+## flux的优势分析：
+-   没有flux的时候，我们都是在组件之间通过事件和props传递参数，但是当组件嵌套很多层的时候，需要一层一层的传递，这种方式就显得很混乱。
+-   flux提供了一个dispatcher（派发器）；全局唯一的，当组件发生某个事件的时候，直接把这个事件反映到dispatcher，不用再一层一层向外层传递。直达的感觉。
+### 如何实现?
+### 组件的事件怎么直接发送给dispatcher？
+-   首先把组件分离成三个部分：view组件、action组件、store模块；
+-   view只负责显示内容，当发生事件时，调用action的方法，action的方法内再调用dispatch的方法，添加个action类型；
+-   dispatcher会提前注册各种动作，当有action添加时，调用store的方法，改变store，
+-   view数据绑定store
+
+### 缺点：
+-   store多个，没法做到数据统一管理
+-   store封装了数据的处理逻辑。
+
+### redux的出现
+
+当组件向dispatcher传递动作信息的时候，就是调用dispatcher的dispatch方法，并且提供一个预置好的动作标识，dispatcher根据组件传递的标识，去调用对用的store的方法；
